# Full_Growth_Farm

./: .gitignore  CLEANUP_SUMMARY.md  DEVELOPMENT_GUIDE.md  LANGUAGE_BUTTON_FIX.md  README.md  SETUP_GUIDE.md  hash_gen.py  package-lock.json
BACKEND/GrowthFarmAPI/: .gitignore  API_DOCUMENTATION_TH.md  API_TABLES_DOCUMENTATION.md  DATABASE_SETUP.md  INSTALLATION_GUIDE.md  QUICK_START.md  README.md  activate-env.bat  check-database.js  cleanup-db.js  dev.bat  dev.ps1  fix-tags-issue.js  package-lock.json  package.json  pyproject.toml  requirements.txt  reset-db.js  start-dev.bat  start-dev.ps1  sync-db.bat  sync-db.ps1  test-api.js  test-db.js  test-gemini.js
BACKEND/GrowthFarmAPI/app/: __init__.py  config.py  database.py  main.py  models_minimal.py  models_new.py  schemas.py  schemas_active.py  schemas_new.py
BACKEND/GrowthFarmAPI/app/auth/: dependencies.py  jwt_handler.py  router.py  schemas.py  service.py
BACKEND/GrowthFarmAPI/app/gemini_ai/: README.md  __init__.py  router.py  schemas.py  service.py
BACKEND/GrowthFarmAPI/app/routers/: farms.py  farms_new.py  health.py  marketplace.py  marketplace_new.py  weather.py
BACKEND/GrowthFarmAPI/src/: server.js
BACKEND/GrowthFarmAPI/src/config/: database.js
BACKEND/GrowthFarmAPI/src/database/: schema.sql
BACKEND/GrowthFarmAPI/src/middleware/: auth.js  localization.js
BACKEND/GrowthFarmAPI/src/models/: Activity.js  Crop.js  Farm.js  IOTDevice.js  Management.js  Marketplace.js  Notification.js  Order.js  OrderItem.js  Product.js  User.js  Weather.js
BACKEND/GrowthFarmAPI/src/routes/: auth.js  auth_thai.js  (+8 more)
(+71 files in other folders)
